# mf_bot

./: .gitignore  README.md  pyproject.toml
mf_bot/: __main__.py  db.py  db.sql  db.sqlite3  settings.py  texts.py
mf_bot/handlers/: __init__.py  beatmakers.py  info.py  login.py  start_battle.py  start_vote.py  test.py  vote.py
mf_bot/tools/: __init__.py  battle.py  beatmakers.py  registration.py  validation.py  vote_process.py
